# tools-rs

./: .gitignore  CODE_ORGANIZATION.md  Cargo.toml  LICENSE.md  README.md  rust_out
.github/workflows/: publish.yml  rust.yml
examples/: Cargo.toml  README.md  db.rs  example.rs  main.rs
examples/basic/: main.rs
examples/chatbot/: main.rs
examples/context/: main.rs
examples/function_declarations/: main.rs
examples/gemini/: gemini.rs  main.rs
examples/hitl/: main.rs
examples/newtype_demo/: main.rs
examples/reqwest/: gem_chat.rs  gemini.rs  main.rs
examples/schema/: main.rs
ffi/python/: Cargo.toml  README.md  pyproject.toml
ffi/python/src/: decorator.rs
ffi/python/tools_rs/: __init__.py
ffi/tools_python/: Cargo.toml
ffi/tools_python/src/: decorator.rs  lib.rs
src/: lib.rs  main.rs  prelude.rs
tests/: context.rs  ffi_builder.rs  ffi_common.rs  ffi_python.rs  metadata.rs  no_features.rs  schema_caching_performance.rs
tests/fixtures/python/: multi.py  no_tools.py  reverse.py  types_demo.py
tool_schema/: Cargo.toml
tool_schema/src/: lib.rs
tool_schema_derive/: Cargo.toml
tool_schema_derive/src/: lib.rs
tools/: Cargo.toml
tools/src/: lib.rs
tools/src/error/: mod.rs
tools/src/models/: mod.rs
tools/src/schema/: mod.rs
tools_core/: Cargo.toml
tools_core/src/: builder.rs  ffi.rs  lib.rs
tools_core/src/ffi/: mod.rs
tools_core/src/ffi/python/: mod.rs
tools_macros/: Cargo.toml
tools_macros/src/: lib.rs
toors/: Cargo.toml
toors/src/: lib.rs  toors_errors.rs
toors/src/db/: mod.rs
toors/src/models/: mod.rs
toors/src/schema/: mod.rs
toors_derive/: Cargo.toml
toors_derive/src/: lib.rs  working.rs
toors_derive/tests/: integration_tests.rs
toors_macros/: Cargo.toml
toors_macros/src/: lib.rs
