[package]
authors      = ["Tools-rs Team"]
autoexamples = false
description  = "Core functionality for the tools-rs tool collection system"
edition      = "2024"
license      = "MIT"
name         = "tools-rs"
version      = "0.1.0"

[lib]
name = "tools_rs"
path = "src/lib.rs"

[workspace]
members  = ["tools", "tools_macros", "examples", "tool_schema", "tool_schema_derive"]
resolver = "2"

[workspace.package]
authors      = ["Tools-rs Team"]
edition      = "2024"
license      = "MIT"
repository   = "https://github.com/EggerMarc/toors"
rust-version = "1.70"

[workspace.dependencies]
chrono     = "0.4.41"
inventory  = "0.3.20"
serde      = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio      = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time", "sync"] }

[dependencies]
inventory.workspace  = true
serde.workspace      = true
serde_json.workspace = true
tokio.workspace      = true
tool_schema          = { path = "./tool_schema" }
tools                = { path = "./tools" }
tools_macros         = { path = "./tools_macros" }

[features]
default = []
