[package]
authors      = ["Tools-rs Team"]
autoexamples = false
description  = "Core functionality for the tools-rs tool collection system"
edition      = "2024"
license      = "MIT"
name         = "tools-rs"
version      = "0.1.1"

[lib]
name = "tools_rs"
path = "src/lib.rs"

[workspace]
members  = ["tools_core", "tools_macros", "examples"]
resolver = "2"

[workspace.package]
authors      = ["Tools-rs Team"]
edition      = "2024"
license      = "MIT"
repository   = "https://github.com/EggerMarc/toors"
rust-version = "1.85"

[workspace.dependencies]
chrono     = "0.4.41"
inventory  = "0.3.20"
serde      = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio      = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time", "sync"] }

[dependencies]
inventory.workspace  = true
serde.workspace      = true
serde_json.workspace = true
tokio.workspace      = true
tools_core           = { version="0.1.1", path = "./tools_core" }
tools_macros         = { version="0.1.1", path = "./tools_macros" }

[features]
default = []
