[package]
description = "Examples for the tools-rs crate"
edition     = "2024"
name        = "examples"
version     = "0.1.0"

[dependencies]
chrono.workspace     = true
inventory.workspace  = true
serde.workspace      = true
serde_json.workspace = true
tokio                = { workspace = true, features = ["full"] }

tools    = { path = "../tools", default-features = false, features = ["schema"] }
tools-rs = { path = "..", default-features = false, features = ["schema"] }

schemars = { workspace = true, optional = true }

[features]
default = []
schema  = ["dep:schemars", "tools/schema", "tools-rs/schema"]

[[example]]
name = "basic"
path = "basic/main.rs"

[[example]]
name = "example"
path = "example.rs"

[[example]]
name = "function_declarations"
path = "function_declarations/main.rs"

[[example]]
name = "schema"
path = "schema/main.rs"
