[package]
description = "Examples for the tools-rs crate"
edition     = "2024"
name        = "examples"
version     = "0.1.0"

[dependencies]
chrono.workspace     = true
inventory.workspace  = true
serde.workspace      = true
serde_json.workspace = true
tokio.workspace      = true


tools    = { path = "../tools", default-features = false }
tools-rs = { path = "..", default-features = false }

tool_schema = { path = "../tool_schema" }

[features]
default = []

[[example]]
name = "basic"
path = "basic/main.rs"


[[example]]
name = "function_declarations"
path = "function_declarations/main.rs"

[[example]]
name = "schema"
path = "schema/main.rs"

[[example]]
name = "newtype_demo"
path = "newtype_demo/main.rs"
