[package]
description = "Examples for the tools-rs crate"
edition     = "2024"
name        = "examples"
version     = "0.1.1"

[dependencies]
chrono.workspace     = true
inventory.workspace  = true
serde.workspace      = true
serde_json.workspace = true
tokio.workspace      = true


tools_core   = { path = "../tools_core", default-features = false }
tools_macros = { path = "../tools_macros" }
tools-rs     = { path = "..", default-features = false }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"

[features]
default = []

[[example]]
name = "basic"
path = "basic/main.rs"


[[example]]
name = "function_declarations"
path = "function_declarations/main.rs"

[[example]]
name = "schema"
path = "schema/main.rs"

[[example]]
name = "newtype_demo"
path = "newtype_demo/main.rs"

[[example]]
name = "reqwest"
path = "reqwest/main.rs"
