[package]
authors      = ["Tools-rs Team"]
description  = "Lightweight JSON Schema generation for tools-rs"
edition      = "2021"
license      = "MIT"
name         = "tool_schema"
rust-version = "1.70"
version      = "0.1.0"

[dependencies]
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0.140"
tool_schema_derive = { path = "../tool_schema_derive" }

[features]
default = []
