[package]
authors      = ["Tools-rs Team"]
description  = "Derive macro for ToolSchema trait"
edition      = "2021"
license      = "MIT"
name         = "tool_schema_derive"
rust-version = "1.70"
version      = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3.3.0"
proc-macro-error = "1.0.4"
proc-macro2      = "1.0.95"
quote            = "1.0.40"
syn              = { version = "2.0.101", features = ["full"] }
