[package]
authors      = ["Tools-rs Team"]
description  = "Core functionality and schema generation for the tools collection system"
edition      = "2024"
license      = "MIT"
name         = "tools_core"
repository   = "https://github.com/EggerMarc/tools-rs"
rust-version = "1.85"
version      = "0.1.4"


[dependencies]
futures    = "0.3.31"
inventory  = "0.3.20"
once_cell  = "1.21.3"
serde      = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror  = "2.0.12"
tokio      = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time", "sync"] }
uuid = { version = "1.18.1", features = ["v4"] }

[features]
default = []
