[package]
name = "toors"
version = "0.1.0"
edition = "2021"

[dependencies]
erased-serde = "0.4.5"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] } # Optional, but common for tool metadata
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros"] }
tokio-test = "0.4.4"
