[package]
edition = "2024"
name    = "toors"
version = "0.3.0"

[dependencies]
futures      = "0.3.31"
inventory    = "0.3.20"
serde        = { version = "1.0.219", features = ["derive"] }
serde_json   = "1.0.140"
thiserror    = "2.0.12"
tokio        = { version = "1.44.2", features = ["macros", "rt-multi-thread", "time"] }
tokio-test   = "0.4.4"
toors_macros = { path = "../toors_macros" }
