[package]
authors.workspace      = true
description            = "Python language adapter for tools-rs FFI"
edition.workspace      = true
license.workspace      = true
name                   = "python"
publish                = false
repository.workspace   = true
rust-version.workspace = true
version                = "0.3.3"

[dependencies]
pyo3       = { version = "0.24", features = ["auto-initialize"] }
serde_json.workspace = true
tokio.workspace      = true
