[project]
name = "tools-rs"
version = "0.3.3"
description = "Python decorator for defining tools-rs LLM tool functions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["llm", "tools", "function-calling", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/EggerMarc/tools-rs"
Repository = "https://github.com/EggerMarc/tools-rs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
